[package]
name = "rust-cses"
version = "0.1.0"
edition = "2018"
publish = false

description = "Solutions for the CSES (Code Submission Evaluation System) problem set"
repository = "https://github.com/Lance-Drane/rust-cses"
readme = "README.md"
keywords = ["competitive", "programming", "cses"]
categories = ["algorithms", "data-structures", "mathematics"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[lints]
workspace = true

[workspace.lints.clippy]
# add pedantic ruleset by default, configure per rule
pedantic = { level = "warn", priority = -1 }
# allow this one because (..=n) range syntax usually gets compiled into worse assembly
range_plus_one = "allow"
